# Learn-Note

./: .gitignore  English.md  Learn-Note.sln  README.md
.github/workflows/: go.yml
Batch/: README.md  Tutorial.bat
Blender/2025/: Learn-House.blend  Learn-House.blend1  Learn-Object-Block.blend  Learn-Stroberi.blend  Learn-Stroberi.blend1  Learn-obj.blend  Learn-obj.blend1
C#/: C#.sln
C#/0-ReservedWord/: 0-ReservedWord.csproj  Program.cs
C#/0-WriteLine/: Program.cs
C#/1-Array/: Program.cs
C#/2-AccessModifier/: Program.cs
C#/3-Recode/: Program.cs
C#/4-Array/: 4-Array.csproj
C#/AccessModifier/: Program.cs
C#/ClassStruct/: Program.cs
C#/Recode/: Program.cs
CPP/: 1_HelloWorld.cpp  2_datatype.cpp  CPPNote.md  Datatype.cpp  Input_stream.cpp  Overflow.cpp  Programming.md  README.md  Reference.md
CPP/Datatype/: Datatype.sln
CPP/HelloWorld/: HelloWorld.sln
CPP/NameSpace/: NameSpace.sln
CS/: Learn-Note.sln  Network.md  OperatingSystem.md  Program.cs  README.md
CS/Array/: Array.cs
CS/Datatype/: DataType.cs  Program.cs
CS/HelloWorld/: HelloWorld.cs
CS/StackandHeap/: Program.cs  StackandHeap.cs
CS/Structure-Program/: Program.cs  Structure-Program.cs  Structure-Program.csproj
CS/Variable/: Program.cs  Variable.cs
Computer-Science/: README.md
Conference/: AI-Transformation-Week.md  CampCon.md
Dotnet/: Learn-Note.sln
English/: Note.md
Go/: 1-variable.go  CMD.md  Makefile  README.md  go.mod  main.go
Go/1-Variable/: go.mod  (+1 more)
Linux/: 0-Admin-manager.md  1-Systeminfo.md  2-Process.md  3-loadaverage.md  4-Free-CMD.md  5-Swap-memory.md  7-TCP-network.md  Docker.md  Kubernetes.md  Process.md  Systeminfo.md  Utility.md
PowerShell/: Backup.ps1  Create.ps1  Reference.md
Powershell/: 1-Variable.ps1
QA-Engineer/: SDLC.md  UIUX.md
Rust/: Cargo.toml  README.md
Rust/Loop/src/: main.rs
Rust/Ownership/src/: main.rs
Rust/Thread/: Cargo.toml
Rust/Thread/src/: main.rs
Rust/src/: lib.rs
Rust/src/config/: user.rs
Shell/: main.sh
(+195 files in other folders)
