[package]
name = "Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
[[bin]]
name = "datatype"
path = "./src/bin/2_datatype.rs"

[[bin]]
name = "operator"
path = "./src/bin/3_operator.rs"

[[bin]]
name = "thread"
path = "./src/bin/7_thread.rs"

[[bin]]
name = "method"
path = "./src/bin/8_method.rs"

[[bin]]
name = "option"
path = "./src/bin/9_Options.rs"

[[bin]]
name = "collection"
path = "./src/bin/11_Collection.rs"

[[bin]]
name = "panic"
path = "./src/bin/Panic.rs"

[[bin]]
name = "Variable"
path = "./src/bin/Variable.rs"

[[bin]]
name = "statement"
path = "./src/bin/Statement.rs"

[[bin]]
name = "Thread"
path = "./src/bin/Thread.rs"

[[bin]]
name = "ownership"
path = "./src/bin/Ownership.rs"