[package]
name = "Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
[[bin]]
name = "thread"
path = "./src/bin/7_thread.rs"

[[bin]]
name = "option"
path = "./src/bin/Options.rs"

[[bin]]
name = "collection"
path = "./src/bin/Collection.rs"

[[bin]]
name = "panic"
path = "./src/bin/Panic.rs"

[[bin]]
name = "variable"
path = "./src/bin/Variable.rs"

[[bin]]
name = "statement"
path = "./src/bin/Statement.rs"

[[bin]]
name = "Thread"
path = "./src/bin/Thread.rs"

[[bin]]
name = "ownership"
path = "./src/bin/Ownership.rs"